--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -389,6 +389,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- DIALOG -->
+
+    <style name="myDialogTheme" parent="MaterialAlertDialog.MaterialComponents">
+        <item name="android:colorAccent">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <!-- SELECTED AND UNSELECTED STYLE -->
     <style name="selected">
         <item name="android:background">@drawable/selected_item</item>
