--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,8 +8,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanel">
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
             android:id="@+id/loadingProfileProgressBar"
@@ -131,7 +131,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center">
 
-                                <RatingBar
+                                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                     android:id="@+id/profileRatingBar"
                                     style="@android:style/Widget.Holo.RatingBar.Small"
                                     android:layout_width="wrap_content"
