--- a/app/src/main/res/layout/changeable_element_photo.xml
+++ b/app/src/main/res/layout/changeable_element_photo.xml
@@ -6,8 +6,16 @@
     android:layout_margin="@dimen/default_margin"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/deleteChangeablePhotoElementText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="X"
+        android:textSize="24sp" />
+
     <ImageView
-        android:id="@+id/photoPhotoElementImage"
+        android:id="@+id/photoChangeablePhotoElementImage"
         style="@style/photoElement" />
 
 </LinearLayout>
