--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -411,6 +411,18 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="selected_button">
+        <item name="android:background">@drawable/selected_item</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/yellow</item>
+    </style>
+
+    <style name="unselected_button">
+        <item name="android:background">@drawable/unselected_item</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/mainBlue</item>
+    </style>
+
     <!-- Стиль свичера -->
     <style name="MySwitch" parent="Theme.AppCompat.Light">
         <!-- активное состояние (30% прозрачности для фона) -->
