--- a/app/src/main/res/layout/fragment_tag.xml
+++ b/app/src/main/res/layout/fragment_tag.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.chip.Chip
-        android:id="@+id/tagFragmentTagText"
+        android:id="@+id/tagFragmentTagChip"
         style="@style/choiceChip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
